--- a/index.html
+++ b/index.html
@@ -32,6 +32,15 @@
           <h1 class="fw-bold">PC Optimum</h1>
           <p>List of Weekly Offers</p>
         </div>
+        <!-- SEARCH BAR -->
+        <form>
+          <input
+            class="form-control"
+            type="search"
+            placeholder="Search"
+            aria-label="Search"
+          />
+        </form>
       </div>
     </div>
 
