Working Search Bar

--- a/index.html
+++ b/index.html
@@ -18,6 +18,9 @@
       crossorigin="anonymous"
     ></script>
 
+    <!-- JQuery -->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
+
     <!-- Custom Javascript -->
     <script src="js/scripts.js"></script>
 
@@ -39,6 +42,7 @@
             type="search"
             placeholder="Search"
             aria-label="Search"
+            id="search"
           />
         </form>
       </div>
