Disable Enter that refreshes page

--- a/index.html
+++ b/index.html
@@ -43,6 +43,7 @@
             placeholder="Search"
             aria-label="Search"
             id="search"
+            onKeyPress="if (event.which == 13) return false;"
           />
         </form>
       </div>
