X-Padding (px) change

--- a/index.html
+++ b/index.html
@@ -29,8 +29,8 @@
   </head>
   <body>
     <!-- Jumbotron -->
-    <div class="pt-5 pb-3 mb-4 bg-dark">
-      <div class="container mb-2 mw-50r">
+    <div class="bg-dark">
+      <div class="container pt-5 pb-3 mb-4 px-3 mw-50r">
         <div class="text-pink">
           <h1 class="fw-bold">PC Optimum</h1>
           <p>List of Weekly Offers</p>
@@ -50,7 +50,7 @@
     </div>
 
     <!-- CARDS -->
-    <div class="container mb-2 mw-50r">
+    <div class="container mb-2 px-3 mw-50r">
       <div id="offers">
         <!-- JSON offers.json stuff here -->
       </div>
