--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
     </div>
 
     <!-- CARDS -->
-    <div class="container mb-2 px-3 mw-50r">
+    <div class="container px-3 mw-50r">
       <div id="offers">
         <!-- JSON offers.json stuff here -->
       </div>
