--- a/index.html
+++ b/index.html
@@ -29,9 +29,9 @@
   </head>
   <body>
     <!-- Jumbotron -->
-    <div class="bg-dark">
+    <div class="bg-pink">
       <div class="container pt-5 pb-3 mb-4 px-3 mw-50r">
-        <div class="text-pink">
+        <div class="text-red">
           <h1 class="fw-bold">PC Optimum</h1>
           <p>List of Weekly Offers</p>
         </div>
