--- a/index.html
+++ b/index.html
@@ -21,6 +21,10 @@
     <!-- JQuery -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
 
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css"
+    />
     <!-- Custom Javascript -->
     <script src="js/scripts.js"></script>
 
@@ -30,8 +34,13 @@
   <body>
     <!-- Jumbotron -->
     <div class="bg-pink">
-      <div class="container pt-5 pb-3 mb-4 px-3 mw-50r">
+      <div class="container pt-4 pb-3 mb-4 px-3 mw-50r">
         <div class="text-red">
+          <h4 class="text-end">
+            <a href="https://www.pcoptimum.ca/"
+              ><i class="far fa-question-circle text-red"></i
+            ></a>
+          </h4>
           <h1 class="fw-bold">PC Optimum</h1>
           <p>List of Weekly Offers</p>
         </div>
