--- a/index.html
+++ b/index.html
@@ -34,14 +34,14 @@
   <body>
     <!-- Jumbotron -->
     <div class="bg-pink">
-      <div class="container pt-4 pb-3 mb-4 px-3 mw-50r">
+      <div class="jumbotron container pt-4 pb-3 px-4 mw-50r">
         <div class="text-red">
           <h4 class="text-end">
             <a href="https://www.pcoptimum.ca/"
               ><i class="far fa-question-circle text-red"></i
             ></a>
           </h4>
-          <h1 class="fw-bold">PC Optimum</h1>
+          <h1 class="fw-bold bigfont">PC Optimum</h1>
           <p>List of Weekly Offers</p>
         </div>
         <!-- SEARCH BAR -->
@@ -58,9 +58,11 @@
       </div>
     </div>
     <!-- CARDS -->
-    <div class="container px-3 mw-50r">
-      <div id="offers">
-        <!-- JSON offers.json stuff here -->
+    <div class="">
+      <div class="container px-4 mw-50r scrollable">
+        <div id="offers">
+          <!-- JSON offers.json stuff here -->
+        </div>
       </div>
     </div>
   </body>
