Attempt: fix scroll on mobile

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
   </head>
   <body>
     <!-- Jumbotron -->
-    <div class="bg-pink">
+    <div class="bg-pink position-sticky">
       <div class="jumbotron container pt-4 pb-3 px-4 mw-50r">
         <div class="text-red">
           <h4 class="text-end">
