--- a/index.html
+++ b/index.html
@@ -63,6 +63,8 @@
         <div id="offers">
           <!-- JSON offers.json stuff here -->
         </div>
+        <div class="pt-5"></div>
+        <div class="pt-5"></div>
       </div>
     </div>
   </body>
