Clarification to multiple breaks

--- a/index.html
+++ b/index.html
@@ -63,6 +63,7 @@
         <div id="offers">
           <!-- JSON offers.json stuff here -->
         </div>
+        <!-- Breaks for temporary fix to mobile device hiding the bottom -->
         <br />
         <br />
         <br />
