--- a/index.html
+++ b/index.html
@@ -1,76 +1,63 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>PC Optimum Offers</title>
 
-    <!-- Bootstrap-->
-    <link
-      href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/css/bootstrap.min.css"
-      rel="stylesheet"
-      integrity="sha384-+0n0xVW2eSR5OomGNYDnhzAbDsOXxcvSN1TPprVMTNDbiYZCxYbOOl7+AMvyTG2x"
-      crossorigin="anonymous"
-    />
-    <script
-      src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/js/bootstrap.bundle.min.js"
-      integrity="sha384-gtEjrD/SeCtmISkJkNUaaKMoLD0//ElJ19smozuHV6z3Iehds+3Ulb9Bn9Plx0x4"
-      crossorigin="anonymous"
-    ></script>
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>PC Optimum Offers</title>
 
-    <!-- JQuery -->
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
+  <!-- Bootstrap-->
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/css/bootstrap.min.css" rel="stylesheet"
+    integrity="sha384-+0n0xVW2eSR5OomGNYDnhzAbDsOXxcvSN1TPprVMTNDbiYZCxYbOOl7+AMvyTG2x" crossorigin="anonymous" />
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/js/bootstrap.bundle.min.js"
+    integrity="sha384-gtEjrD/SeCtmISkJkNUaaKMoLD0//ElJ19smozuHV6z3Iehds+3Ulb9Bn9Plx0x4" crossorigin="anonymous">
+  </script>
 
-    <link
-      rel="stylesheet"
-      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css"
-    />
-    <!-- Custom Javascript -->
-    <script src="js/scripts.js"></script>
+  <!-- JQuery -->
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
 
-    <!-- Custom CSS -->
-    <link rel="stylesheet" href="css/styles.css" />
-  </head>
-  <body>
-    <!-- Jumbotron -->
-    <div class="bg-pink position-sticky">
-      <div class="jumbotron container pt-4 pb-3 px-4 mw-50r">
-        <div class="text-red">
-          <h4 class="text-end">
-            <a href="https://www.pcoptimum.ca/"
-              ><i class="far fa-question-circle text-red"></i
-            ></a>
-          </h4>
-          <h1 class="fw-bold bigfont">PC Optimum</h1>
-          <p>List of Weekly Offers</p>
-        </div>
-        <!-- SEARCH BAR -->
-        <form>
-          <input
-            class="form-control"
-            type="search"
-            placeholder="Search"
-            aria-label="Search"
-            id="search"
-            onKeyPress="if (event.which == 13) return false;"
-          />
-        </form>
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css" />
+  <!-- Custom Javascript -->
+  <script src="js/scripts.js"></script>
+
+  <!-- Custom CSS -->
+  <link rel="stylesheet" href="css/styles.css" />
+</head>
+
+<body>
+  <!-- Jumbotron -->
+  <div class="bg-pink position-sticky">
+    <div class="jumbotron container pt-4 pb-3 px-4 mw-50r">
+      <div class="text-red">
+        <!-- Help Button -->
+        <h4 class="text-end">
+          <a href="https://www.pcoptimum.ca/"><i class="far fa-question-circle text-red"></i></a>
+        </h4>
+        <h1 class="fw-bold bigfont">PC Optimum</h1>
+        <p>List of Weekly Offers</p>
       </div>
+      <!-- SEARCH BAR -->
+      <form>
+        <input class="form-control" type="search" placeholder="Search" aria-label="Search" id="search"
+          onKeyPress="if (event.which == 13) return false;" />
+      </form>
     </div>
-    <!-- CARDS -->
-    <div class="">
-      <div class="container px-4 mw-50r scrollable">
-        <div id="offers">
-          <!-- JSON offers.json stuff here -->
-        </div>
-        <!-- Breaks for temporary fix to mobile device hiding the bottom -->
-        <br />
-        <br />
-        <br />
-        <br />
-        <br />
-        <br />
+  </div>
+  <!-- CARDS -->
+  <div class="">
+    <div class="container px-4 mw-50r scrollable">
+      <div id="offers">
+        <!-- JSON offers.json stuff here -->
       </div>
+      <!-- Breaks for temporary fix to mobile device hiding the bottom -->
+      <br />
+      <br />
+      <br />
+      <br />
+      <br />
+      <br />
     </div>
-  </body>
+  </div>
+</body>
+
 </html>
