Add end of list text

--- a/index.html
+++ b/index.html
@@ -50,12 +50,13 @@
         <!-- JSON offers.json stuff here -->
       </div>
       <!-- Breaks for temporary fix to mobile device hiding the bottom -->
-      <br />
-      <br />
-      <br />
-      <br />
-      <br />
-      <br />
+      <p class="text-center text-gray">
+        <br>
+        <br>
+        End of list
+        <br>
+        <br>
+      </p>
     </div>
   </div>
 </body>
