Clarification of text: add 'Possible'

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
           <a href="https://www.pcoptimum.ca/"><i class="far fa-question-circle text-red"></i></a>
         </h4>
         <h1 class="fw-bold bigfont">PC Optimum</h1>
-        <p>List of Weekly Offers</p>
+        <p>List of Possible Weekly Offers</p>
       </div>
       <!-- SEARCH BAR -->
       <form>
