Replace <br> with margins

--- a/index.html
+++ b/index.html
@@ -49,12 +49,8 @@
         <!-- JSON offers.json stuff here -->
       </div>
       <!-- Breaks for temporary fix to mobile device hiding the bottom -->
-      <p class="text-center text-gray">
-        <br>
-        <br>
+      <p class="text-center text-gray mt-5 mb-5">
         End of list
-        <br>
-        <br>
       </p>
     </div>
   </div>
